--- a/index.html
+++ b/index.html
@@ -5,6 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI-Driven AV Maintenance</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #0e0e0e;
+            color: #ffffff;
+            text-align: center;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            padding: 20px;
+        }
+        .hero {
+            background: linear-gradient(135deg, #1e3c72, #2a5298);
+            padding: 80px 20px;
+        }
+        .hero h1 {
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+        }
+        .hero p {
+            font-size: 1.2rem;
+            opacity: 0.9;
+        }
+        .cta-button {
+            display: inline-block;
+            background-color: #ffcc00;
+            color: #000;
+            padding: 15px 30px;
+            text-decoration: none;
+            font-size: 1.2rem;
+            border-radius: 5px;
+            margin-top: 20px;
+            transition: background 0.3s;
+        }
+        .cta-button:hover {
+            background-color: #ffaa00;
+        }
+        .features, .how-it-works, .target-audience, .signup {
+            padding: 60px 20px;
+        }
+        .feature-grid, .steps {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .feature, .step {
+            background-color: #1e1e1e;
+            padding: 20px;
+            border-radius: 10px;
+            width: 300px;
+            text-align: center;
+            transition: transform 0.3s;
+        }
+        .feature:hover, .step:hover {
+            transform: scale(1.05);
+        }
+        .target-audience ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .target-audience li {
+            font-size: 1.2rem;
+            margin: 10px 0;
+            opacity: 0.9;
+        }
+        .signup {
+            background: linear-gradient(135deg, #2a5298, #1e3c72);
+        }
+    </style>
 </head>
 <body>
 
