Hero Image added

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="md:w-1/2">
-                <img src="/api/placeholder/600/400" alt="AV technician working remotely" class="rounded-lg shadow-2xl">
+                <img src="images/hero-technician.jpg" alt="AV technician working remotely" class="rounded-lg shadow-2xl">
             </div>
         </div>
     </section>
